# MAI-Architecture_labs

./: README.md
Lab_2/: fill_db.sh  lab2_docker-compose.yml  lab2_dockerfile.txt
Lab_2/service/: CMakeLists.txt  index.yaml
Lab_2/service/config/: config.cpp  config.h
Lab_2/service/database/: database.cpp  user.cpp  user.h
Lab_2/service/web_server/: http_request_factory.h  http_web_server.h
Lab_2/service/web_server/handlers/: user_handler.h
Lab_3/: delivery.yaml  delivery_service_dockerfile.txt  docker-compose.yml  fill_db.sh  user.yaml  user_service_dockerfile.txt
Lab_3/delivery_service/: CMakeLists.txt
Lab_3/delivery_service/config/: config.cpp
Lab_3/delivery_service/database/: database.h
Lab_3/delivery_service/web_server/handlers/: delivery_handler.h
Lab_3/user_service/: main.cpp
Lab_3/user_service/database/: database.cpp
Lab_3/user_service/utils/: utils.h
Lab_3/user_service/web_server/: checks.h
Lab_3/user_service/web_server/handlers/: user_handler.h
Lab_4/: delivery_dockerfile.txt  docker-compose.yml
Lab_4/service/: CMakeLists.txt  index.yaml
Lab_4/service/config/: config.cpp  config.h
Lab_4/service/database/: database.cpp  database.h  user.cpp  user.h
Lab_4/service/utils/: utils.h
Lab_4/service/web_server/: checks.h  http_request_factory.h
Lab_4/service/web_server/handlers/: secured_user_handler.h  user_handler.h
Lab_5/: delivery_dockerfile.txt  docker-compose.yml  performance.md  test.lua  test.sh
Lab_5/service/: CMakeLists.txt
Lab_5/service/config/: config.cpp
Lab_5/service/database/: database.cpp  user.cpp
Lab_5/service/web_server/: checks.h  http_request_factory.h
Lab_5/service/web_server/handlers/: user_handler.h
Lab_6/: delivery.yaml  docker-compose.yml  gateway_dockerfile.txt  mongo-init.sh
Lab_6/delivery_service/config/: config.h
Lab_6/delivery_service/database/: database.cpp  delivery.cpp  delivery.h
Lab_6/delivery_service/utils/: utils.h
Lab_6/delivery_service/web_server/: http_request_factory.h  http_web_server.h
Lab_6/gateway/: CMakeLists.txt  CircuitBreaker.h  main.cpp
Lab_6/gateway/config/: config.cpp  config.h
Lab_6/gateway/database/: cache.h
Lab_6/user_service/: CMakeLists.txt
Lab_6/user_service/config/: config.cpp  config.h
Lab_6/user_service/database/: cache.cpp  database.h  user.h
Lab_6/user_service/web_server/: checks.h  http_request_factory.h
lab_01/: readme.md  workspace.dsl  workspace.json
